apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress

spec:
  rules:
    - host: qbittorrent.proxy2.lan.qidux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http

  tls:
    - hosts:
        - qbittorrent.proxy2.lan.qidux.com
      secretName: lan-wildcard-tls
